# mini_vllm

./: .gitignore  LICENSE  README.md  build_transformer_pdf.py  pyproject.toml  pyproject.toml.orig  requirements.txt  transformer_revision_notes.md
examples/: compare_distilgpt2.py
llm_inference_engine/: __init__.py  cli.py
llm_inference_engine/engine/: inference.py  token_selection.py
llm_inference_engine/loaders/: __init__.py  distilgpt2_config.py  distilgpt2_files.py  distilgpt2_weights.py
llm_inference_engine/model/: __init__.py  activations.py  attention_heads.py  attention_output.py  attention_scaling.py  attention_scores.py  attention_softmax.py  attention_sublayer.py  attention_values.py  causal_mask.py  embeddings.py  feed_forward.py  feed_forward_sublayer.py  gpt2_tokenizer.py  input_embeddings.py  (+11 more)
tests/: __init__.py  test_activations.py  test_attention_heads.py  test_attention_output.py  test_attention_scaling.py  test_attention_scores.py  test_attention_softmax.py  test_attention_sublayer.py  test_attention_values.py  test_causal_mask.py  test_cli.py  test_config.py  test_distilgpt2_config.py  test_distilgpt2_files.py  test_distilgpt2_weights.py  test_embeddings.py  test_feed_forward.py  test_feed_forward_sublayer.py  test_gpt2_tokenizer.py  test_inference.py  test_input_embeddings.py  test_lm_head.py  test_multi_head_attention.py  test_normalization.py  test_positions.py  test_qkv.py  test_residual.py  test_single_head_attention.py  test_tiny_model.py  test_token_selection.py  test_tokenizer.py  test_transformer_block.py  test_transformer_stack.py
(+4 files in other folders)
