[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-vllm"
version = "0.1.0"
description = "A from-scratch learning project for LLM inference"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["mini_vllm*"]

